<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>edu.mit.cci</groupId>
	<artifactId>pogs</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>Platform for Online Group Studies</name>
	<description>
		The Platform for Online Group Studies (POGS) is a tool to study collective learning.
	</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.6</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<java.version>1.8</java.version>

        <!-- Plugin versions -->
        <properties-maven-plugin.version>1.0.0</properties-maven-plugin.version>
        <yaml-properties-maven-plugin.version>1.1.3</yaml-properties-maven-plugin.version>
        <frontend-maven-plugin.version>1.6</frontend-maven-plugin.version>

		<log4j2.version>2.15.0</log4j2.version><!-- CVE-2021-44228  -->

        <!-- JavaScript tool versions
        <node.version>v9.11.1</node.version>
        <yarn.version>v1.5.1</yarn.version>
		-->
		<node.version>v12.13.1</node.version>
		<yarn.version>v1.19.2</yarn.version>
    </properties>

	<dependencies>
        <!-- Web dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-websocket</artifactId>
		</dependency>
        <dependency>
            <groupId>org.springframework.session</groupId>
            <artifactId>spring-session-data-redis</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>
		<dependency>
			<groupId>nz.net.ultraq.thymeleaf</groupId>
			<artifactId>thymeleaf-layout-dialect</artifactId>
		</dependency>

		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>1.1.0.Final</version>
		</dependency>
        <!-- Database dependencies -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<scope>runtime</scope>
		</dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jooq</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
			<version>8.5.10</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-mysql</artifactId>
			<version>8.5.12</version>
		</dependency>

        <!-- Dev dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
        </dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-yaml</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20180813</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.6</version>
		</dependency>
        <!-- Monitoring dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
		<dependency>
			<groupId>com.blueconic</groupId>
			<artifactId>browscap-java</artifactId>
			<version>1.3.1</version>
		</dependency>
        <!-- Misc dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-mail</artifactId>
        </dependency>

        <!-- Test dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Commons -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<!-- Jitsi as a service dependency -->
		<dependency>
			<groupId>com.auth0</groupId>
			<artifactId>java-jwt</artifactId>
			<version>3.12.0</version>
		</dependency>
		<dependency>
			<groupId>org.codemonkey.simplejavamail</groupId>
			<artifactId>simple-java-mail</artifactId>
			<version>3.1.1</version>
		</dependency>

	</dependencies>

	<build>

		<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>1.19</version>
					<executions>
						<execution>
							<id>download-licenses</id>
							<goals>
								<goal>download-licenses</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

			<plugin>
                <groupId>it.ozimov</groupId>
                <artifactId>yaml-properties-maven-plugin</artifactId>
                <version>${yaml-properties-maven-plugin.version}</version>
				<executions>
					<execution>
						<phase>initialize</phase>
						<goals>
							<goal>read-project-properties</goal>
						</goals>
						<configuration>
							<files>
								<file>src/main/resources/application-database-config.yml</file>
							</files>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-maven-plugin</artifactId>
				<version>7.15.0</version>
				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>migrate</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<!--suppress MavenModelInspection (read from database-config) -->
					<url>${database.url}</url>
					<!--suppress MavenModelInspection (read from database-config) -->
					<user>${database.username}</user>
					<!--suppress MavenModelInspection (read from database-config) -->
					<password>${database.password}</password>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.jooq</groupId>
				<artifactId>jooq-codegen-maven</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>mysql</groupId>
						<artifactId>mysql-connector-java</artifactId>
						<version>${mysql.version}</version>
					</dependency>
				</dependencies>
				<configuration>
					<jdbc>
						<driver>com.mysql.jdbc.Driver</driver>
						<!--suppress MavenModelInspection (read from database-config) -->
						<url>${database.url}</url>
						<!--suppress MavenModelInspection (read from database-config) -->
						<user>${database.username}</user>
						<!--suppress MavenModelInspection (read from database-config) -->
						<password>${database.password}</password>
					</jdbc>
					<generator>
						<name>org.jooq.codegen.JavaGenerator</name>
						<database>
							<name>org.jooq.meta.mysql.MySQLDatabase</name>
							<!--suppress MavenModelInspection (read from database-config) -->
							<inputSchema>${database.schema}</inputSchema>
							<includes>.*</includes>
							<excludes>flyway_schema_history</excludes>
							<forcedTypes>
								<forcedType>
									<name>BOOLEAN</name>
									<types>(?i:TINYINT(\s*\(\d+\))?(\s*UNSIGNED)?)</types>
								</forcedType>
							</forcedTypes>
						</database>
						<generate>
							<javaTimeTypes>false</javaTimeTypes>
							<pojos>true</pojos>
							<pojosEqualsAndHashCode>true</pojosEqualsAndHashCode>
						</generate>
						<target>
							<packageName>edu.mit.cci.pogs.model.jooq</packageName>
							<directory>target/generated-sources/jooq</directory>
						</target>
                        <!-- TODO: this generator needs to be in an external library -->
                        <!--<strategy>-->
                            <!--<name>edu.mit.cci.pogs.config.jooq.JooqGeneratorStrategy</name>-->
                        <!--</strategy>-->
					</generator>
				</configuration>
			</plugin>

            <plugin>
                <groupId>com.github.eirslett</groupId>
                <artifactId>frontend-maven-plugin</artifactId>
                <version>${frontend-maven-plugin.version}</version>

                <executions>
                    <execution>
                        <id>install node and yarn</id>
                        <goals>
                            <goal>install-node-and-yarn</goal>
                        </goals>
                        <configuration>
                            <nodeVersion>${node.version}</nodeVersion>
                            <yarnVersion>${yarn.version}</yarnVersion>
                        </configuration>
                    </execution>
					<execution>
						<id>yarn config</id>
						<goals>
							<goal>yarn</goal>
						</goals>
						<configuration>
							<arguments>config set ignore-engines true</arguments>
						</configuration>
					</execution>

                    <execution>
                        <id>yarn install</id>
                        <goals>
                            <goal>yarn</goal>
                        </goals>
                        <configuration>
                            <arguments>install</arguments>
                        </configuration>
                    </execution>

                    <execution>
                        <id>gulp build</id>
                        <goals>
                            <goal>gulp</goal>
                        </goals>

                        <configuration>
                            <arguments>build</arguments>
                        </configuration>
                    </execution>

                </executions>
            </plugin>
		</plugins>
	</build>
</project>
